force-app/main/default/objects/Process_Attribute_Path_Deviation__c/Process_Attribute_Path_Deviation__c.object-meta.xml
<CustomObject>
    <label>Process Attribute Path Deviation</label>
    <nameField>
        <label>Process Attribute Path Deviation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Attribute Path Deviations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>