force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Document_Sharing_Status__c.field-meta.xml
<CustomField>
    <fullName>Document_Sharing_Status__c</fullName>
    <label>Document Sharing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Document_Handler_Status</valueSetName>
    </valueSet>
</CustomField>