force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Is_Document_Sharing_Path__c.field-meta.xml
<CustomField>
    <fullName>Is_Document_Sharing_Path__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Document Sharing Path</label>
    <type>Checkbox</type>
</CustomField>