force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Process_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Process_Attribute__c</fullName>
    <label>Process Attribute</label>
    <referenceTo>Process_Attribute__c</referenceTo>
    <relationshipLabel>Process Attribute Path Deviations</relationshipLabel>
    <relationshipName>Process_Attribute_Path_Deviations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>