force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Process_Execution_Condition__c.field-meta.xml
<CustomField>
    <fullName>Process_Execution_Condition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Process Execution Condition</label>
    <referenceTo>Process_Execution_Condition__c</referenceTo>
    <relationshipLabel>Process Attribute Path Deviations</relationshipLabel>
    <relationshipName>Process_Attribute_Path_Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>