force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Process_Path_Task_Detail_End__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Task_Detail_End__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deviation End On PPTD</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Attribute Path Deviations (Deviation End On PPTD)</relationshipLabel>
    <relationshipName>Process_Attribute_Path_Deviations1</relationshipName>
    <type>Lookup</type>
</CustomField>