force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Process_Path_Task_Detail_Start__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Task_Detail_Start__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deviation Start From PPTD</label>
    <referenceTo>Process_Path_Task_Detail__c</referenceTo>
    <relationshipLabel>Process Attribute Path Deviations</relationshipLabel>
    <relationshipName>Process_Attribute_Path_Deviations</relationshipName>
    <type>Lookup</type>
</CustomField>