force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Process_Path_Type__c.field-meta.xml
<CustomField>
    <fullName>Process_Path_Type__c</fullName>
    <label>Process Path Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Process_Path_Type</valueSetName>
    </valueSet>
</CustomField>