force-app/main/default/objects/Process_Attribute_Path_Deviation__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subject</valueSetName>
    </valueSet>
</CustomField>