force-app/main/default/objects/Process_Attribute_Path_Deviation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Process_Path_Task_Detail_End__c</columns>
    <columns>Process_Path_Task_Detail_Start__c</columns>
    <columns>Document_Sharing_Status__c</columns>
    <columns>Is_Document_Sharing_Path__c</columns>
    <columns>Process_Execution_Condition__c</columns>
    <columns>Process_Attribute__c</columns>
    <columns>Process_Path__c</columns>
    <columns>Process_Path_Type__c</columns>
    <columns>isActive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>